2008-10-04  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.[ch]: (keyword_model_finalize),
	(dh_keyword_model_set_words), (dh_keyword_model_filter): Get rid
	of unused copy of the keyword list. Remove support for filtering
	by book id through the search string and add an explicit book id
	instead.

	* src/dh-main.c: (extract_book_id), (search_normal),
	(search_assistant), (message_received_cb), (main): Parse the
	search string here and pass an explicit book id search term to the
	search functionality.

	* src/dh-search.[ch]: Remove the page search UI and replace the
	book search entry with a combo box, and adapt to this throughout
	the rest of the file.

	* src/dh-window.[ch]: (dh_window_search): Add book id parameter
	and pass it on when searching.

2008-10-04  Richard Hult  <richard@imendio.com>

	* src/dh-link.c (dh_link_get_book_id): Make this work for books as
	well (return their own ids).

2008-10-04  Richard Hult  <richard@imendio.com>

	* src/dh-search.c: Whitespace cleanup.

2008-10-04  Richard Hult  <richard@imendio.com>

	* src/dh-link.[ch]: (dh_link_new),
	(dh_link_get_book_id): Add id for links, only used for books.

	* src/dh-keyword-model.c: Remove unused book/page link lists. Also
	remove the ability to search for page ids, they are more or less
	random anywya and just clutters the search result list.
	(dh_keyword_model_filter): Change the book search to use the id,
	not the title (this restores the book search entry to work as
	before the recent refactoring).

	* src/dh-parser.c: Adapt to link API change by specifying the id
	when creating links.

	* src/dh-search.c: Remove the page search entry.

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-link.c:
	* src/dh-link.h: Replace the book and page names with pointers to
	their respective DhLinks. This saves quite a bit of memory, but
	breaks searching for pages and books, which will be reimplemented
	soon in a more useful fashion.
